<resources>
    <string name="app_name">Kitobz</string>
    <string name="str_ok" />
    <string name="str_login">Войти</string>
    <string name="str_skip">Пропустить</string>
    <string name="str_smsConfirmation">Код подтверждения</string>
    <string name="str_discussion">Обуждение</string>
    <string name="str_discussions">Обсуждения</string>
    <string name="str_sms_send_text">Введите код который мы вам\n отправили по СМС</string>
    <string name="str_confirm">Подтвердить</string>
    <string name="str_resendTime">Отправить СМС повторно через 57 секунд</string>
    <string name="str_change_image">Хотите сменить аватарку?</string>
    <string name="str_hi">Ассалом, \nИмя</string>
    <string name="str_choose_language">Выберите предпочитаемый язык\n приложения</string>
    <string name="str_finish">Завершить</string>
    <string name="str_follow">Подписаться</string>
    <string name="str_you_followed">Вы подписаны</string>
    <string name="str_discover_books_you_i">Откройте для себя весь мир</string>
    <string name="str_find_millions_of_the">Найдите тысячи бумажных, электронных книг и аудио книг</string>
    <string name="discover_books_you_i">Откройте для себя весь мир</string>
    <string name="find_millions_of_the">Найдите тысячи бумажных, электронных книг и аудио книг</string>
    <string name="str_all_books">Все книги</string>
    <string name="str_books">книги</string>
    <string name="all_books">All books</string>
    <string name="str_book">Книга</string>
    <string name="str_my_library">Моя библиотека</string>
    <string name="str_your_ebook_library_empty">Ваша библиотека электронных книг пуста.</string>
    <string name="str_your_audiobook_library_empty">Ваша библиотека аудиокниг пока пуста.</string>
    <string name="str_you_can_choose_here">Выбрать можете здесь.</string>
    <string name="str_welcome_back">Здравствуйте!</string>
    <string name="str_sign_in_to_continue">Войдите в свой аккаунт!</string>
    <string name="str_phone_number">Номер телефона</string>
    <string name="str_password">Пароль</string>
    <string name="str_forgot_password">Забыли пароль?</string>
    <string name="str_dont_have_an_account">Хотите зарегистрироваться?</string>
    <string name="str_enter_your_email_and">Введите свой номер телефона, и мы отправим вам код для сброса пароля</string>
    <string name="str_phone">Телефон:</string>
    <string name="str_registration">Регистрация</string>
    <string name="str_registration_text">Заполните всего 3 поля,и вы китобзик!</string>
    <string name="str_name">Имя</string>
    <string name="str_have_an_account_sig">У Вас уже есть аккаунт? Войдите</string>
    <string name="str_enter_your_phonenumber_for_send_sms_code">Введите свой номер телефона, и мы отправим вам код для сброса пароля.</string>
    <string name="str_code_example">пример: 1234</string>
    <string name="str_russian">Русский</string>
    <string name="str_tajik">Тоҷики</string>
    <string name="str_files">Файлов:</string>
    <string name="str_duration">Длительность:</string>
    <string name="str_voice_language">Язык озвучки:</string>
    <string name="str_audio_books">Аудиокниги</string>
    <string name="str_electronic_books">Электронные книги</string>
    <string name="str_pin">Закрепить</string>
    <string name="str_unpin">Открепить</string>
    <string name="str_delete">Удалить</string>
    <string name="str_proceed">Продолжить</string>
    <string name="str_begin">Начать</string>
    <string name="str_completed">Завершено</string>
    <string name="str_completed_of">Завершено:</string>
    <string name="str_number_of_pages">Количество страниц:</string>
    <string name="str_book_name">До встречи с тобой</string>
    <string name="str_step">Глава 5. Перекрёсток на Варшав...</string>
    <string name="str_heard">прослушано</string>
    <string name="str_percentage">47%</string>
    <string name="str_hours">часов</string>
    <string name="str_minutes">минут</string>
    <string name="str_hour">час.</string>
    <string name="str_min">мин</string>
    <string name="str_dot">•</string>
    <string name="str_sleep_text">Чтение остановится через</string>
    <string name="str_turn_on_the_timer">Включить таймер</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_find_book_in_library">Найти книгу в библиотеке</string>
    <string name="str_cancel">Отменить</string>
    <string name="str_not_found_when_search_my_library">Если не нашли то что искали,\nвоспользуйтесь поиском в каталоге</string>
    <string name="str_basket">Корзина</string>
    <string name="str_you_dont_have_books_in_shopping_cart">У вас пока нет книг в корзине покупок</string>
    <string name="str_qty">Кол-во</string>
    <string name="str_price">Цена:</string>
    <string name="str_somoni">сомони</string>
    <string name="str_stock">Склад: В наличии</string>
    <string name="str_type_of">Тип:</string>
    <string name="str_paper">Бумажный</string>
    <string name="str_e_book">Электронная книга</string>
    <string name="str_audio_book">Аудиокнига</string>
    <string name="str_total_books">Всего книг:</string>
    <string name="str_delivery">Доставка:</string>
    <string name="str_sum">Сумма:</string>
    <string name="str_add_comment">Добавить комментарий</string>
    <string name="str_comment">Комментарий</string>
    <string name="str_white">Напишите</string>
    <string name="str_select_payment_method">Выберите метод оплаты</string>
    <string name="str_cash">Наличными</string>
    <string name="str_checkout">Оформить заказ</string>
    <string name="str_information">Информация</string>
    <string name="str_framed">оформлен</string>
    <string name="str_order_of">Заказ №</string>
    <string name="str_number">№</string>
    <string name="str_all_orders_is_done_information">Вам очень скоро перезвонит нас менеджер для уточнения деталей. Посчитать количество символов в тексте. Такая функция есть в текстовых редакторах, но не всегда удобно создавать новый документ и копировать туда нужный фрагмент. Компания Involta вывела подсчет количества слов и символов в отдельный инструмент, которым можно пользоваться даже со смартфона.</string>
    <string name="str_information_about_basket_page">Копирайтерам, специалистам по СЕО и контекстной рекламе часто требуется посчитать количество символов в тексте. Такая функция есть в текстовых редакторах, но не всегда удобно создавать новый документ и копировать туда нужный фрагмент. Компания Involta вывела подсчет количества слов и символов в отдельный инструмент, которым можно пользоваться даже со смартфона.
\n\nПрограмма в режиме онлайн анализирует исследуемый фрагмент и считает в нем общее количество: слов, символов (с пробелами и без), букв кириллического и латинского алфавита, цифр, пробелов и остальных знаков. Эти данные помогают понять, соблюдены ли технические требования к тексту, нет ли замены символов или повтора пробелов.
\n\nТекст можно проверить сразу полностью или вводить по строке, если нужен более качественный анализ. В любом случае онлайн-подсчет количества символов будет точным и быстрым, ведь скорость работы программы зависит только от возможности вашего подключения к интернету. Сько от возможности вашего подключения к интернету.</string>
    <string name="str_order_history">История заказов</string>
    <string name="str_see_all">Смотреть все</string>
    <string name="str_point">·</string>
    <string name="str_expectation">Ожидание</string>
    <string name="str_in_processing">В обработке</string>
    <string name="str_favorites">Избранное</string>
    <string name="str_reviews">Отзывов</string>
    <string name="str_reviews_1">Отзывы</string>
    <string name="str_new_review">Новый отзыв</string>
    <string name="str_information_about_new_review">Отправлять уведомления на все новые отзывы о книгах в любых категориях</string>
    <string name="str_reviews_by_interest_only">Отзывы только по интересу</string>
    <string name="str_information_about_reviews_by_interest_only">Отправлять уведомления только на те книги где я оставлял отзыв</string>
    <string name="str_new_topic">Новая тема</string>
    <string name="str_information_about_new_topic">Отправлять уведомления при создании новой темы в разделе "Обсуждения"</string>
    <string name="str_interest_only_answers">Ответы только по интересу</string>
    <string name="str_information_about_interest_only_answers">Отправлять уведомления только на те темы где я оставлял ответ</string>
    <string name="str_answer_only_to_me">Ответы только мне</string>
    <string name="str_information_about_answer_only_to_me">Отправлять уведомления только если мне кто-то ответил</string>
    <string name="str_information_about_memory_audio_books">При нажатии на кнопку "Очистить" удалятся все файлы в разделе "Моя библиотека->Аудиокниги". При необходимости можно будет скачать заново.</string>
    <string name="str_information_about_memory_electronic_books">При нажатии на кнопку "Очистить" удалятся все файлы в разделе "Моя библиотека->Электронные книги". При необходимости можно будет скачать заново.</string>
    <string name="str_information_about_memory_pictures">При нажатии на кнопку "Очистить" удалятся картинки. При повторном просмотре они скачаются заново.</string>
    <string name="str_caching">Кэширование</string>
    <string name="str_profile_books">Книг</string>
    <string name="str_pictures">Картинки</string>
    <string name="str_clear">Очистить</string>
    <string name="str_clear_all">Очистить все</string>
    <string name="str_settings">Настройки</string>
    <string name="str_personal_data">Личные данные</string>
    <string name="str_notifications">Уведомления</string>
    <string name="str_application">Приложение</string>
    <string name="str_log_out">Выйти</string>
    <string name="str_application_version">Версия приложения</string>
    <string name="str_total_orders">Всего заказов:</string>
    <string name="str_date_of">Дата:</string>
    <string name="str_status_of">Статус:</string>
    <string name="str_save">Спасти</string>
    <string name="str_memory">Память</string>
    <string name="str_mb">мб</string>
    <string name="str_bookmarks">Закладки</string>
    <string name="str_content">Содержание</string>
    <string name="str_sleep_timer">Таймер сна</string>
    <string name="str_search">Найти</string>
    <string name="str_speed">Скорость</string>
    <string name="str_paper_book">Бумажные книги</string>
    <string name="str_categories">Категории</string>
    <string name="str_show_all">Смотреть все</string>
    <string name="str_authors">Авторы</string>
    <string name="str_new_arrivals">Новые поступления</string>
    <string name="str_news">Новости</string>
    <string name="str_search_results">Результаты поиска</string>
    <string name="str_status_in_cash">В наличии</string>
    <string name="str_not_in_cash">Нет в наличии</string>
    <string name="str_year_published">Год издания</string>
    <string name="str_language_published">Язык издания</string>
    <string name="str_language">Язык</string>
    <string name="str_pages">Страниц</string>
    <string name="str_paper_type">Переплёт</string>
    <string name="str_genres">Жанры</string>
    <string name="str_feedbacks">Отзывы</string>
    <string name="str_write_feedbacks">Написать отзыв</string>
    <string name="str_add_cart">Добавить в корзину</string>
    <string name="str_read_fragment">Читать фрагмент</string>
    <string name="str_listen_fragment">Слушать фрагмент</string>
    <string name="str_publish">Опубликовать</string>
    <string name="str_filter">Фильтр</string>
    <string name="str_reset">Сброс</string>
    <string name="str_type">Тип</string>
    <string name="str_sorting">Сортировка</string>
    <string name="str_default">По умолчанию</string>
    <string name="str_popular">Популярные</string>
    <string name="str_home">Главная</string>
    <string name="str_cart">Корзина</string>
    <string name="str_profile">Аккаунт</string>
</resources>