<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.ConfirmationFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="3dp"
        android:fitsSystemWindows="true"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:elevation="3dp"
            app:navigationIcon="@drawable/ic_back">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/str_smsConfirmation" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sms_send_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginTop="52dp"
            android:gravity="center"
            android:text="@string/str_sms_send_text" />

        <EditText
            android:id="@+id/sms_code_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sms_send_txt"
            android:layout_marginHorizontal="32dp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:layout_marginTop="32dp"
            android:hint="@string/str_code_example"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/bn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sms_code_et"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/str_confirm" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bn_confirm"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/sf_pro_text_regular"
            android:gravity="center"
            android:text="@string/str_resendTime"
            android:textColor="@color/gray" />


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>