<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.ConfirmationFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="3dp"
        app:navigationIcon="@drawable/ic_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/str_forgot_password" />
    </androidx.appcompat.widget.Toolbar>


    <RelativeLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sms_send_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="52dp"
            android:gravity="center"
            android:text="@string/str_enter_your_phonenumber_for_send_sms_code" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sms_send_txt"
            android:layout_marginHorizontal="30dp"
            app:boxStrokeColor="@color/gray"
            app:startIconDrawable="@drawable/ic_phone"
            app:startIconTint="@color/gray">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/str_phone_number"
                android:imeOptions="actionNext"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_phonenumber"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/str_confirm" />


    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>